--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   },
   "dependencies": {
     "astro": "^5.8.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.7",
+    "tailwindcss-cli": "^0.1.2"
   }
 }
