--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,17 @@
-# build output
-dist/
-# generated types
-.astro/
-
-# dependencies
 node_modules/
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-
-
-# environment variables
-.env
-.env.production
-
-# macOS-specific files
 .DS_Store
-
-# jetbrains setting folder
-.idea/
-
-# local AWS scratch files
-aws-*.json
-
+_site/
+.jekyll-metadata
+.bundle/
+.astro
+astro.config.mjs
+tailwind.config.js
+postcss.config.js
+tsconfig.json
+.vscode/
+dist-config.json
+cfg.json
+cfg-with-waf.json
+geo-allow.json
+alias.json
+cf-config.json
