--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,19 +11,19 @@ jobs:
     env:
       BUCKET: remote-it-help.com
       DIST_ID: ${{ secrets.CF_DIST_ID }}
-      
+
     steps:
       # Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Set up Ruby for Jekyll
+      # Set up Ruby for Jekyll (use Ruby 3.1.0 or above)
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.7'  # You can adjust this if necessary
+          ruby-version: '3.1'  # Updated Ruby version for compatibility with Bundler
 
-      # Install Jekyll and dependencies
+      # Install Jekyll and Bundler
       - name: Install Jekyll and Bundler
         run: |
           gem install bundler
