--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,7 @@
-node_modules/
 .DS_Store
 _site/
 .jekyll-metadata
+.jekyll-cache/
 .bundle/
-.astro
-astro.config.mjs
-tailwind.config.js
-postcss.config.js
-tsconfig.json
 .vscode/
-dist-config.json
-cfg.json
-cfg-with-waf.json
-geo-allow.json
-alias.json
-cf-config.json
+
