--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,7 @@ sass:
 plugins:
   - jekyll-seo-tag
   - jekyll-feed
+  - jekyll-sitemap # Added for XML sitemap generation
 
 feed:
   path: /feed.xml
