--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Remote IT Help"
 email: "hello@it-help.tech"
 description: "Expert Remote IT Support - DMARC, DNS, macOS, & Email Deliverability"
-logo: assets/images/logo-blue.png
+logo: /assets/images/logo-blue.png
 baseurl: ""
 url: "https://remote-it-help.com"
 
