--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: "Remote IT Help"
+title: "Remote IT Help | Expert macOS, iOS, Email, DNS & Endpoint Security Support"
 email: "hello@it-help.tech"
-description: "Expert Remote IT Support - DMARC, DNS, macOS, & Email Deliverability"
+description: "Get expert, on-demand remote IT support nationwide. We specialize in Apple macOS & iOS, DNS, DMARC, Email troubleshooting & deliverability, and endpoint cybersecurity solutions."
 logo: /assets/images/logo-blue.png
 baseurl: ""
 url: "https://remote-it-help.com"
